# enterprise_agentic_rag

./: .env.example  .gitignore  AGENTS.md  README.md  TECHNICAL_DEEP_DIVE.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.harness/: agent.md
config/: otel-collector-config.yaml  prometheus.yml
data/: near_dedup_index.json
docker/: Dockerfile.es
docs/: developer-features.md  resume-developer-customer-service-agent.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
harness/: README.md
scripts/: build_graph_indexes.py  export_failed_cases.py  healthcheck.sh  import_eval_cases.py  ingest_docs.py  ingest_graph.py  init_db.py  migrate_local_to_middleware.py  reset_dev.sh  run_eval_gate.py  run_graph_rag.py  schedule_ingest.py  start_dev.sh  stop_dev.sh
technical_deep_dive/: 01-项目总览与系统架构.md  02-LangGraph-工作流编排.md  03-Agent-体系与进阶设计.md  04-RAG-检索引擎与GraphRAG.md  05-记忆上下文Prompt与幻觉治理.md  06-工具安全故障恢复.md  07-可观测性评估与数据飞轮.md  08-模型配置中间件与前端.md  09-交付部署测试与稳定性.md  10-数据结构技术选型与项目指标.md  11-面试题速查与场景题.md  12-未匹配题目完美回答.md
tests/: conftest.py  test_code_agent.py  test_code_execution.py  test_code_symbol_extractor.py  test_context.py  test_deep_intent.py  test_es_keyword.py  test_evals.py  test_external_retriever.py  test_graph_context.py  test_graph_fusion.py  test_graph_orchestrator.py  test_graph_retriever.py  test_graph_router.py  test_knowledge_agent.py  test_llm_classifier.py  test_long_term_memory.py  test_master_agent.py  test_memory.py  test_milvus_rag.py  test_observability.py  (+8 more)
(+252 files in other folders)
